--- a/style.css
+++ b/style.css
@@ -47,3 +47,15 @@ button {
   font-size: 18px;
   font-weight: 500;
 }
+
+.btn-primary {
+  display: inline-flex;
+  height: 56px;
+  padding: 17px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: var(--Dark-green-buttons, #3A4F39);
+}
