--- a/style.css
+++ b/style.css
@@ -46,16 +46,57 @@ strong {
 button {
   font-size: 18px;
   font-weight: 500;
+  padding: 13px 25px;
 }
+
+
 
 .btn-primary {
   display: inline-flex;
-  height: 56px;
-  padding: 17px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border: 0;
+  border-radius: 4px;
+  background: var(--dark-green);
+  color: var(--white);
+}
+
+.btn-primary:hover {
+  background-color: #283A27;
+}
+
+.btn-secondary {
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   flex-shrink: 0;
   border-radius: 4px;
-  background: var(--Dark-green-buttons, #3A4F39);
+  border: 1px solid var(--dark-green);
+  background: var(--white);
+  color: var(--dark-green);
+}
+
+.btn-secondary:hover {
+  border-color: #213220;
+  color: #213220;
+}
+
+.btn-large {
+  padding: 17px 30px;
+}
+
+.btn-middle {
+  padding: 13px 25px;
+}
+
+.btn-small {
+  padding: 10px 20px;
+}
+
+.btn-disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
 }
