--- a/global.css
+++ b/global.css
@@ -31,7 +31,11 @@
 html {
   height: 100%;
   width: 100%;
-  background: var(--background-url) no-repeat center center fixed;
+  /* background: var(--background-url) no-repeat center center fixed; */
+}
+
+body {
+  margin: 0;
 }
 
 /* stilul h1 definit  */
