--- a/CTA-26/style.css
+++ b/CTA-26/style.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 89px
+  gap: 89px;
 }
 
 .cta-image {
   background-image: var(--photo-url);
   background-position: center;
   background-size: cover;
-  
+
   width: 560px;
   height: 100vh;
 }
